# task-mgr-framework

./: .gate-clippy.txt  .gate-lib.txt  .gate-test.txt  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  wip-grok-fallback-runner-pre-cleanup.patch
.claude/agents/: audio-codec-expert.md  loop-engine-parity-auditor.md  md-to-json-prd-reviewer.md  production-code-architect.md  rust-python-code-reviewer.md  standard-code-reviewer.md
.claude/commands/: compound.md  plan-tasks.md  prd.md  review-loop.md  review-plan.md  spike.md  tasks.md  tm-apply.md  tm-decisions.md  tm-invalidate.md  tm-learn.md  tm-next.md  tm-recall.md  tm-status.md
.github/workflows/: ci.yml  release.yml
.task-mgr/tasks/: .last-branch  batch-chain-worktrees-prompt.md  batch-chain-worktrees.json  codex-runner-merged-prompt.md  codex-runner-merged.json  codex-runner-prompt.md  codex-runner.json  curate-learnings-p1-prompt.md  curate-learnings-p2-prompt.md  doctor-setup-prompt.md  doctor-setup.json  e2e-test-loop-prompt.md  e2e-test-loop.json  embedding-dedup-prompt.md  embedding-dedup.json  grok-fallback-runner-prompt.md  grok-fallback-runner.json  human-review-checkpoint.json  improve-learning-recall.json  key-decision-points-prompt.md  key-decisions-mgmt-prompt.md  key-decisions-mgmt.json  (+31 more)
docker/: README.md  SETUP.md  docker-compose.yml
docs/: ARCHITECTURE.md  INTEGRATION.md  LEARNINGS.md  QUICKSTART.md
scripts/: backup-db.sh  claude-loop.sh  escalation-policy.md  prompt.md  rebuild-from-json.sh  recall-stack-up.sh  retire-bash-denial-learnings.py
src/: error.rs  handlers.rs  lib.rs  main.rs  observability.rs  output.rs  paths.rs  skills.rs
tasks/: .deadline-import-learnings-fixes  01-recall-scores-and-supersession-prompt.md  01-recall-scores-and-supersession.json  01-runner-capability-enforcement-prompt.md  01-runner-capability-enforcement.json  02-engine-orchestration-boundaries-prompt.md  02-engine-orchestration-boundaries.json  agent-learnability-prompt.md  agent-learnability.json  auto-review-after-loop-prompt.md  auto-review-after-loop.json  auto-review-followups-prompt.md  auto-review-followups.json  backlog.md  backlog_limit_handling.txt  batch-chain-incomplete-stop-prompt.md  batch-chain-incomplete-stop.json  concurrent-loop-lock-fix.json  cost-efficient-auxiliary-llm-prompt.md  cost-efficient-auxiliary-llm.json  curate-learnings-p1-prompt.md  curate-learnings-p1.json  curate-learnings-p2-prompt.md  curate-learnings-p2.json  curate-learnings-p3-prompt.md  curate-learnings-p3.json  curate-session-cleanup-prompt.md  curate-session-cleanup.json  data-driven-prompt-construction-prompt.md  data-driven-prompt-construction.json  dedup-dismissals-prompt.md  dedup-dismissals.json  dedup-pair-mode-only-prompt.md  dedup-pair-mode-only.json  doctor-orphan-prd-check-prompt.md  doctor-orphan-prd-check.json  grok-fallback-runner.json  grok-review-convergence-plan.md  grok-review-spike-enforcement.md  harden-baseline-tier-routing-prompt.md  (+100 more)
tests/: add_integration.rs  apply_status_updates_per_update.rs  capability_tier_matrix.rs  cheatsheet_drift.rs  cli_tests.rs  codex_provider_hint_threading.rs  codex_recovery.rs  codex_runner_integration.rs  codex_runner_overrides_invariant.rs  concurrent.rs  crash_escalation_comprehensive.rs  crash_escalation_per_task.rs  e2e_loop.rs  error_handling.rs  escape_valve_lifecycle_e2e.rs  fallback_config.rs  grok_auth_failure.rs  grok_runner_integration.rs  grok_runner_unit.rs  grok_to_claude_fallback.rs  human_review_cli.rs  import_export.rs  init_archived_reimport.rs  iteration_pipeline.rs  iteration_pipeline_parity.rs  iteration_result_conversation.rs  learnings.rs  lifecycle_exception_lint.rs  lifecycle_performance.rs  lifecycle_shadow.rs  lifecycle_stderr_contract.rs  model_fields_cli.rs  model_fields_round_trip.rs  model_resolution_integration.rs  model_selection_engine_edges.rs  models_command.rs  multi_prd_lifecycle.rs  no_bare_option_resolve_effective_runner.rs  no_hardcoded_models.rs  no_raw_prints.rs  (+35 more)
(+326 files in other folders)
