[package]
name = "task-mgr"
version = "0.2.0-a"
edition = "2024"
description = "A standalone CLI tool for managing AI agent loop tasks with SQLite as working state"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Database
# Note: bundled includes FTS5 by default in SQLite 3.9+
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"

# File locking
fs2 = "0.4"

# Man page generation
clap_mangen = "0.3"

# Async runtime (used for loop engine orchestration)
tokio = { version = "1", features = ["rt", "macros", "time"] }

# Signal handling (OS-level, works even when tokio runtime is blocked)
signal-hook = "0.4"

# POSIX process control (kill(2) for child termination)
libc = "0.2"

# HTTP client (sync, for OAuth + usage API)
ureq = { version = "2", features = ["json"] }

# Hashing (stale detection)
md5 = "0.8"

# Environment variable loading
dotenvy = "0.15"

# Glob expansion (batch mode)
globwalk = "0.9"

# Atomic file writes (credentials, deadlines)
tempfile = "3"

# Pattern matching (context scanner, detection engine)
regex = "1"
hostname = "0.4.2"

# URL percent-encoding (Grok session directory path construction)
urlencoding = "2"

# Structured diagnostics logging (CONTRACT-LOG-001 channel B): a tracing
# subscriber with a console layer (WARN+, overridable via TASK_MGR_LOG) and a
# daily-rolling file appender (DEBUG+). Product/operator output stays byte-exact
# in `src/output::ui` (channels A/A2) and never enters tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.24"
# Used by reranker HTTP tests.
mockito = "1"
static_assertions = "1"
# Byte-visible snapshot tests (PRD JSON sync stderr contract).
expect-test = "1"

# Stderr-capture test runs with `harness = false` because the default libtest
# harness intercepts `eprintln!` via thread-local OUTPUT_CAPTURE, which would
# defeat libc::dup2-based stderr capture. With the custom main, FD 2 reaches
# our tempfile directly.
[[test]]
name = "lifecycle_stderr_contract"
path = "tests/lifecycle_stderr_contract.rs"
harness = false
